--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
   },
   "scripts": {
     "start": "gulp server",
-    "build": "gulp build",
+    "build": "gulp build && gulp minify",
     "postinstall": "npm run build"
   },
   "main": "index.js"
