--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
     "build": "gulp build && gulp minify",
     "postinstall": "npm run build"
   },
-  "main": "index.js"
+  "main": "index.js",
+  "devDependencies": {
+    "eslint": "^1.9.0"
+  }
 }
